Visual changes and some content tweaks.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   
   <body>
 
+    <h1>Screen Emulator</h1>
+    
+    <p>A tool for web developers and designers to view sites on different screen sizes in one place.</p>
+    
     <section class="basic">
     <h1>Display a site with a specific screen size</h1>
       <form id="userInput">
