Cleaned up files for 2.2. release.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/screen.css" />
 	<script type="text/javascript" src="js/jquery-1.10.2.js" /></script>
 	<script type="text/javascript" src="js/screen.js" /></script>
-	<script src="jqueryui/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.js"></script>
+	<!--<script src="jqueryui/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.js"></script>-->
   </head>
   
   <body>
@@ -29,6 +29,7 @@
       </iframe>
     </section>
   
+  <!-- Under Development
     <section class="draggable">
     <h1>Display a site in a draggable/rescalable/resizable frame</h1>
       <form id="resizableInput">
@@ -39,7 +40,7 @@
       <iframe id="rDisplay" name="rDisplay" >
       </iframe>
     </section>
-    
+  -->  
     
     <section class="presized">
     <h1>Display a site in phone, tablet, and desktop size</h1>
