Cleaned up files with new resize option.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="rescaleDiv" class="ui-widget-content">
     <p>Test</p>
     <iframe id="rDisplay" name="rDisplay" class="ui-widget-content">
-    </iframe
+    </iframe>
     </div>
      
     </section>
