--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
     </section>
 
     <section class="draggable">
-    <h1>Display a site in a draggable/rescalable/resizable frame</h1>
+    <h1>Display a site in a resizable frame</h1>
       <form id="resizableInput">
         <input id="rurl" name="rurl" class="website" type="text" placeholder="Enter site url." />
         <input name="rsubmit" type="button" onclick="resizableSubmit();" value="Update" />
       </form>
      
     <div id="rescaleDiv" class="ui-widget-content">
-    <p>Test</p>
-    <iframe id="rDisplay" name="rDisplay" class="ui-widget-content">
-    </iframe>
+      <iframe id="rDisplay" name="rDisplay" class="ui-widget-content">
+      </iframe>
     </div>
      
     </section>
