--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
     <section class="basic" id="basic">
     <h1>Display a site with a specific screen size</h1>
       <form id="userInput">
+        <label for="uurl">s:</label>
         <input id="uurl" name="uurl" class="website" type="text" placeholder="Enter site url." />
+        <label for="displayWidth">w:</label>
         <input id="dWidth" name="displayWidth" class="sizePar" type="text" placeholder="width in pixels" />
+        <label for="displayHeight">h:</label>
         <input id="dHeight" name="displayHeight" class="sizePar" type="text" placeholder="height in pixels" />
         <input name="usubmit" type="button" onclick="formSubmit();" value="Update" />
       </form>
