--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <h1>About Screen Emulator</h1>
       
       <p>You may be asking, "What's a screen emulator?" or "Why does this matter?".</p>
-      <p>If you've ever designed responsively, testing different browsers and screen sizes is incredibly important. This is a simple, free tool to test sites and apps. Sometimes designing and developing responsively involves considering screen sizes and pixel counts that you may not have access to with your current screen size. This tool lets you specify dimensions and view what that site looks like at the size or resolution.</p>
+      <p>This is a responsive design tool. If you've ever designed responsively, testing different browsers and screen sizes is incredibly important. This is a simple, free tool to test sites and apps. Sometimes designing and developing responsively involves considering screen sizes and pixel counts that you may not have access to with your current screen size. This tool lets you specify dimensions and view what that site looks like at that size or resolution.</p>
       <p>Feel free to download the tool and use it for your local projects.</p>
       <p>This application is currently under development. Your feedback is welcome. You can <a href="https://github.com/emitche/screenemulator">get the source code</a> on GitHub.</p>
     </section>
