--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <meta name="keywords" content="responsive design, screen emulator, testing repsonsive designs" />
   <meta charset="UTF-8" />
   
+  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="jqueryui/jquery-ui-1.10.3.custom/css/graytheme/jquery-ui-1.10.3.custom.css" />
 	<link rel="stylesheet" type="text/css" href="css/screen.css" />
+  
 	
 	<script type="text/javascript" src="js/jquery-1.10.2.js" /></script>
 	<script type="text/javascript" src="js/screen.js" /></script>
