--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
   
   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="jqueryui/jquery-ui-1.10.3.custom/css/graytheme/jquery-ui-1.10.3.custom.css" />
-	<link rel="stylesheet" type="text/css" href="css/screen.css" />
+	<link rel="stylesheet" type="text/css" href="css/screen2.css" />
   
 	
 	<script type="text/javascript" src="js/jquery-1.10.2.js" /></script>
