--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="keywords" content="responsive design, screen emulator, testing responsive design" />
   <meta charset="UTF-8" />
   
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
   <link rel="stylesheet" type="text/css" href="jqueryui/jquery-ui-1.10.3.custom/css/graytheme/jquery-ui-1.10.3.custom.css" />
 	<link rel="stylesheet" type="text/css" href="css/screen.css" />
