Add class to user input text boxes.

--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
         <span class="inputs">
           <i class="fa fa-external-link"></i>
           <label for="uurl">site:</label>
-          <input id="uurl" name="uurl" class="website" type="text" placeholder="Enter site url." />
+          <input id="uurl" name="uurl" class="website uInput" type="text" placeholder="Enter site url." />
         </span>
         <span class="inputs">
           <i class="fa fa-arrows-h"></i>
           <label for="displayWidth">width:</label>
-          <input id="dWidth" name="displayWidth" class="sizePar" type="text" placeholder="width in pixels" />
+          <input id="dWidth" name="displayWidth" class="sizePar uInput" type="text" placeholder="width in pixels" />
         </span>
         <span class="inputs">
           <i class="fa fa-arrows-v"></i>
           <label for="displayHeight">height:</label>
-          <input id="dHeight" name="displayHeight" class="sizePar" type="text" placeholder="height in pixels" />
+          <input id="dHeight" name="displayHeight" class="sizePar uInput" type="text" placeholder="height in pixels" />
         </span>
          
         <input name="usubmit" type="button" onclick="formSubmit();" value="Update" />
