Fix user submit. First success on enter key.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <input id="dHeight" name="displayHeight" class="sizePar uInput" type="text" placeholder="height in pixels" />
         </span>
          
-        <input name="usubmit" type="button" onclick="formSubmit();" value="Update" />
+        <input name="usubmit" type="button" onclick="userSubmit();" value="Update" />
       </form>
       
       <iframe id="displayPage" name="displayPage"></iframe>
