--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      
       <form id="multiInput">
         <i class="fa fa-external-link"></i>
-        <input id="murl" name="murl" class="website" type="text" placeholder="Enter site url." />
+        <input id="murl" name="murl" class="website" type="text" placeholder="Enter site url." onkeypress="multiEnter();" />
         <input name="msubmit" type="button" onclick="multiSubmit();" value="Update" />
       </form>
       
