Adjustments to content and navigation in about page.

--- a/about.html
+++ b/about.html
@@ -11,13 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-  <link rel="stylesheet" type="text/css" href="jqueryui/jquery-ui-1.10.3.custom/css/graytheme/jquery-ui-1.10.3.custom.css" />
 	<link rel="stylesheet" type="text/css" href="css/screen.css" />
-  
-	
-	<script type="text/javascript" src="js/jquery-1.10.2.js" /></script>
-  <script type="text/javascript" src="jqueryui/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.js"></script>
-	<script type="text/javascript" src="js/screen.js" /></script>
   
   <link href="css/fonts/font-awesome/css/font-awesome.css" rel="stylesheet" />
 
@@ -26,7 +20,7 @@
   <body>
 	
     <header>
-      <h1>Screen Emulator</h1>
+      <h1><a href="index.html">Screen Emulator</a></h1>
       
       <p>A tool for web developers and designers to view sites on different screen sizes in one place.</p>
       
@@ -37,7 +31,7 @@
           <li><a href="#multiscreen">Multiple Screens</a></li>
           <li><a href="#resizable">Resizable Frame</a></li>
           <li><a href="#basic">Specify Screen Size</a></li>
-          <li id="specialButton"><a href="#about">About This Project</a></li>
+          <li id="specialButton"><a href="about.html">About This Project</a></li>
         </ul>
       </nav>
     </header>
