Update header navigation on index.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
 	
     <header>
-      <h1>Screen Emulator</h1>
+      <h1><a href="index.html">Screen Emulator</a></h1>
       
       <p>A tool for web developers and designers to view sites on different screen sizes in one place.</p>
       
@@ -37,7 +37,7 @@
           <li><a href="#multiscreen">Multiple Screens</a></li>
           <li><a href="#resizable">Resizable Frame</a></li>
           <li><a href="#basic">Specify Screen Size</a></li>
-          <li id="specialButton"><a href="#about">About This Project</a></li>
+          <li id="specialButton"><a href="about.html">About This Project</a></li>
         </ul>
       </nav>
     </header>
