Update nav links on about page.

--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
       
       <nav>
         <ul>
-          <li><a href="#multiscreen">Multiple Screens</a></li>
-          <li><a href="#resizable">Resizable Frame</a></li>
-          <li><a href="#basic">Specify Screen Size</a></li>
+          <li><a href="index.html#multiscreen">Multiple Screens</a></li>
+          <li><a href="index.html#resizable">Resizable Frame</a></li>
+          <li><a href="index.html#basic">Specify Screen Size</a></li>
           <li id="specialButton"><a href="about.html">About This Project</a></li>
         </ul>
       </nav>
