Add touch functionality. Separate new features into separate file.

--- a/index2.html
+++ b/index2.html
@@ -11,16 +11,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-  <link rel="stylesheet" type="text/css" href="jqueryui/jquery-ui-1.10.3.custom/css/graytheme/jquery-ui-1.10.3.custom.css" />
-  <!--<link rel="stylesheet" type="text/css" href="jqueryui/jquery-ui-1.10.4/css/redmond/jquery-ui.min.css" />-->
+  <!--<link rel="stylesheet" type="text/css" href="jqueryui/jquery-ui-1.10.3.custom/css/graytheme/jquery-ui-1.10.3.custom.css" />-->
+  <link rel="stylesheet" type="text/css" href="jqueryui/jquery-ui-1.10.4/css/redmond/jquery-ui.min.css" />
   <link rel="stylesheet" type="text/css" href="css/screen.css" />
   
 	
   <script type="text/javascript" src="js/jquery-1.11.1.js" /></script>
-  <script type="text/javascript" src="jqueryui/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.js"></script>
-  <!--<script type="text/javascript" src="jqueryui/jquery-ui-1.10.4/js/jquery-ui-1.10.4.js"></script>-->
+  <!--<script type="text/javascript" src="jqueryui/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.js"></script>-->
+  <script type="text/javascript" src="jqueryui/jquery-ui-1.10.4/js/jquery-ui-1.10.4.js"></script>
   <!-- Add Touch hack here -->
-  <!--<script type="text/javascript" src="jqueryui/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>-->
+  <script type="text/javascript" src="jquery.ui.touch-punch.min.js"></script>
   <script type="text/javascript" src="js/screen.js" /></script>
   <link href="css/fonts/font-awesome/css/font-awesome.css" rel="stylesheet" />
 
