Add resizeable tool to small screens for test page.

--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
   <!--<link rel="stylesheet" type="text/css" href="jqueryui/jquery-ui-1.10.3.custom/css/graytheme/jquery-ui-1.10.3.custom.css" />-->
   <link rel="stylesheet" type="text/css" href="jqueryui/jquery-ui-1.10.4/css/redmond/jquery-ui.min.css" />
-  <link rel="stylesheet" type="text/css" href="css/screen.css" />
+  <link rel="stylesheet" type="text/css" href="css/screen2.css" />
   
 	
   <script type="text/javascript" src="js/jquery-1.11.1.js" /></script>
